--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://ehp425-react-flask-heroku.herokuapp.com/"
+  "proxy": "http://localhost:5000/"
 }
